make index-style.css

--- a/css/hotels-style.css
+++ b/css/hotels-style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic");
-* {
+body {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
@@ -8,4 +8,15 @@
 
 html {
   font-size: 10px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
