--- a/css/hotels-style.scss
+++ b/css/hotels-style.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic');
 
-* {
+body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -10,7 +10,7 @@ html {
   font-size: 10px;
 }
 
-.visualli-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
